# practice_linearalgebra_pure_C

./: CMakeLists.txt  README.md
docs/행렬/: 행렬곱.md
include/: color.h  la.h  viz.h  viz3d.h
lessons/lec01_vector/: main.c
lessons/lec02_3d_cube/: main.c
lessons/lec02_lf/: main.c
lessons/lec02_matrix/: main.c
lessons/lec02_triineq/: main.c
lessons/template/: main.c
src/: la.c  viz_sdl.c
tools/: new_lec.sh
